# stochastic-lab

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  netlify.toml
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  monte_carlo_scaling.cpp
cmake/: BuildInfo.cmake  CompilerWarnings.cmake  Dependencies.cmake  GenerateGitInfo.cmake  Sanitizers.cmake  build_config.hpp.in
configs/: greeks.json  heston.json
configs/calibration/: market_surface.json  synthetic_surface.json
configs/experiment/: README.md  barrier.json  calibration.json  calibration_stability.json  convergence.json  coverage.json  cross_method.json  edge_cases.json  greeks.json  heston_cf_validation.json  heston_simulation.json  pde.json  variance_reduction.json
configs/price/: monte_carlo_asian_call.json  (+4 more)
docs/: ARCHITECTURE-DECISIONS.MD  BARRIER-MONITORING-METHODOLOGY.md  BENCHMARK-CAPTURE-METHODOLOGY.md  BENCHMARK-PLAN.MD  BUILD-PLAN.MD  CALIBRATION-METHODOLOGY.md  CONVERGENCE-METHODOLOGY.md  COVERAGE-METHODOLOGY.md  CROSS-METHOD-METHODOLOGY.md  DEFINITION-OF-DONE.MD  DESIGN-SPEC.MD  EDGE-CASES-METHODOLOGY.md  EXPERIMENT-CATALOG.MD  FAILURE-MODES.MD  FLOATING-POINT-POLICY.md  GREEKS-METHODOLOGY.md  HESTON-CF-VALIDATION-METHODOLOGY.md  HESTON-PRICING-METHODOLOGY.md  HESTON-SIMULATION-METHODOLOGY.md  MATHEMATICAL-SPEC.MD  MULTITHREADING-METHODOLOGY.md  PDE-CONVERGENCE-METHODOLOGY.md  PHASE-13-READINESS-AUDIT.md  PHASE-14-READINESS-AUDIT.md  PRODUCT-SPEC.MD  PROJECT-IDENTITY.MD  PROJECT-SPEC.MD  ROADMAP.MD  TECHNICAL-DESIGN.MD  TECHNICAL-PAPER.md  TESTING-STRATEGY.MD  VALIDATION-PLAN.MD  VARIANCE-REDUCTION-METHODOLOGY.md  VERSION_CONTROL.md
python/: check_docs.py  derive_csv.py  generate_bs_references.py  generate_distribution_references.py  generate_manifest.py  generate_philox_kat.py  generate_random_stream_golden.py  plot_benchmarks.py  plot_convergence.py  plot_experiments.py  review_scaling_baseline.py  synthesize_capture_fixtures.py  verify_claims.py
results/: EXP-01.csv  EXP-01.json  EXP-02.csv  EXP-02.json  EXP-03.csv  EXP-03.json  EXP-04.csv  EXP-04.json  EXP-05.csv  EXP-05.json  EXP-06.csv  EXP-06.json  EXP-07.csv  EXP-07.json  EXP-08.csv  EXP-08.json  EXP-09.csv  EXP-09.json  EXP-10.csv  EXP-10.json  EXP-11.csv  EXP-11.json  EXP-12.csv  EXP-12.json  EXP-13.csv  EXP-13.json  EXP-14.csv  EXP-14.json  EXP-15.csv  EXP-15.json  MANIFEST.json  README.md
scripts/: capture_scaling_baseline.py  check_includes.py  lint.sh  run_benchmarks.sh
site/: .gitignore  DEPLOYMENT.md  SECURITY-NOTES.md  next.config.mjs  package-lock.json  package.json  tsconfig.json
src/: CMakeLists.txt
src/calibration/: heston_calibrator.cpp  market_dataset.cpp  parameter_transform.cpp  volatility_surface.cpp
src/cli/: calibrate_command.cpp  calibrate_command.hpp  experiment_command.cpp  experiment_command.hpp  greeks_command.cpp  greeks_command.hpp  main.cpp  options.cpp  options.hpp  output.cpp  output.hpp  price_command.cpp  price_command.hpp  simulate_command.cpp  simulate_command.hpp
src/concurrency/: parallel_reduce.cpp
src/config/: domain_parsers.cpp
src/core/: build_info.cpp  config.cpp
src/engines/: barrier_analytic.cpp  barrier_monte_carlo.cpp  black_scholes_analytic.cpp  finite_difference_engine.cpp  geometric_asian_analytic.cpp  greeks_monte_carlo.cpp  heston_analytic.cpp  heston_monte_carlo.cpp  implied_volatility.cpp  monte_carlo_engine.cpp
src/experiments/: barrier_experiments.cpp  calibration_experiments.cpp  convergence.cpp  convergence_experiments.cpp  coverage_experiments.cpp  cross_method_experiments.cpp  edge_case_experiments.cpp  experiment.cpp  greek_experiments.cpp  heston_cf_validation_experiments.cpp  heston_simulation_experiments.cpp  pde_experiments.cpp  scheme_moments.cpp  variance_reduction_experiments.cpp
src/instruments/: asian_option.cpp  barrier_option.cpp  european_option.cpp
src/market/: market_state.cpp
src/models/: black_scholes.cpp  heston.cpp
src/numerics/: nelder_mead.cpp  tridiagonal.cpp
src/pde/: asset_grid.cpp  black_scholes_operator.cpp  boundary_conditions.cpp
src/random/: random_stream.cpp
src/simulation/: gbm_path_generator.cpp  gbm_stepper.cpp  time_grid.cpp
src/statistics/: distributions.cpp  multi_seed.cpp  online_moments.cpp  regression.cpp
tests/: CMakeLists.txt  capture_orchestrator_test.py
tests/calibration/: heston_calibrator_test.cpp  market_dataset_test.cpp  parameter_transform_test.cpp
tests/cli/: calibrate_command_test.cpp  experiment_command_test.cpp  greeks_command_test.cpp  options_test.cpp  price_command_test.cpp  simulate_command_test.cpp
tests/concurrency/: engine_threading_test.cpp  parallel_reduce_test.cpp
tests/core/: build_info_test.cpp  config_test.cpp  error_test.cpp  result_test.cpp
tests/engines/: barrier_analytic_test.cpp  barrier_monte_carlo_test.cpp  barrier_pde_test.cpp  black_scholes_greeks_test.cpp  black_scholes_high_precision_test.cpp  black_scholes_invariants_test.cpp  black_scholes_reference_test.cpp  finite_difference_test.cpp  geometric_asian_test.cpp  greeks_monte_carlo_test.cpp  heston_analytic_test.cpp  heston_monte_carlo_test.cpp  implied_volatility_test.cpp  monte_carlo_engine_test.cpp  variance_reduction_test.cpp
tests/experiments/: convergence_test.cpp  coverage_experiment_test.cpp  cross_method_experiment_test.cpp  edge_case_experiment_test.cpp  heston_cf_validation_experiment_test.cpp  scheme_moments_test.cpp  variance_reduction_experiment_test.cpp
tests/instruments/: european_option_test.cpp
tests/market/: market_state_test.cpp
tests/models/: black_scholes_test.cpp
tests/numerics/: nelder_mead_test.cpp  normal_test.cpp  tridiagonal_test.cpp
tests/pde/: asset_grid_test.cpp  black_scholes_operator_test.cpp  interpolation_test.cpp
tests/random/: philox_test.cpp  random_stream_test.cpp  reproducibility_test.cpp
tests/simulation/: gbm_test.cpp
tests/statistics/: distributions_test.cpp  multi_seed_test.cpp  online_moments_test.cpp  regression_test.cpp
tests/support/: thread_agreement.hpp
tests/validation/: quantlib_cross_validation_test.cpp
(+135 files in other folders)
